--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -6,7 +6,7 @@
             <div class="col-6">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12"><a href="" class="btn btn-primary btn-block">Users List</a></div>
+                        <div class="col-12"><a href="{{ path('usersList') }}" class="btn btn-primary btn-block">Users List</a></div>
                         <div class="col-12">
                             <table class="table">
                                 <thead>
@@ -32,7 +32,7 @@
             <div class="col-6">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12"><a href="" class="btn btn-primary btn-block">Devices List</a></div>
+                        <div class="col-12"><a href="{{ path('devicesList') }}" class="btn btn-primary btn-block">Devices List</a></div>
                         <div class="col-12">
                             <table class="table">
                                 <thead>
