Update Devices and Users, Controllers and Views
user can sub and unsub to a device
@TODO do the same for devices

--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -19,18 +19,41 @@
                     </tr>
                     </thead>
                     <tbody>
+                    {% set arrayId = [] %}
                     {% for device in user.devices %}
                         <tr>
                             <td>#{{ device.id }}</td>
                             <td><a href="">@{{ device.name }}</a></td>
-                            <td><a class="btn btn-block btn-light" href="">Unsubscribe</a></td>
+                            <td><a class="btn btn-block btn-danger btn-sm" href="{{ path('unsubDevice',{'userId':user.id,'deviceId':device.id}) }}">Unsubscribe</a></td>
                         </tr>
+                        {% set arrayId = arrayId|merge([device.id]) %}
                     {% endfor %}
                     </tbody>
                 </table>
             </div>
             <div class="col-6">
                 <h2>Add Device</h2>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <td>Id</td>
+                        <td>Name</td>
+                        <td>Add</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    {% for device in devices %}
+                        {% if device.id not in arrayId %}
+                            <tr>
+                                <td>{{ device.id }}</td>
+                                <td><a href="">@{{ device.name }}</a></td>
+                                <td><a class="btn btn-block btn-info btn-sm" href="{{ path('addDevice',{'userId':user.id,'deviceId':device.id}) }}">Add This Device</a></td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
